--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,11 @@
     <string name="login_failed">"Login failed"</string>
 
     <string name="link">
-        <a href="https://github.com/ahona-omi"> PageTradeGit</a>
+        <a href="https://github.com/ahona-omi/PageTrade"> PageTradeGit</a>
+    </string>
+
+    <string name="yt">
+        <a href="https://youtu.be/MAV2hfJr7N4"> PageTradeYoutube</a>
     </string>
 
     <string-array name="usertype">
